--- a/package.json
+++ b/package.json
@@ -28,20 +28,24 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^7.0.0",
+    "@angular/cdk": "~7.3.1",
     "@angular/common": "^7.0.0",
     "@angular/compiler": "^7.0.0",
     "@angular/core": "^7.0.0",
+    "@angular/flex-layout": "^7.0.0-beta.23",
     "@angular/forms": "^7.0.0",
+    "@angular/material": "^7.3.1",
     "@angular/platform-browser": "^7.0.0",
     "@angular/platform-browser-dynamic": "^7.0.0",
     "@angular/router": "^7.0.0",
-    "core-js": "^2.5.4",
-    "rxjs": "~6.3.3",
-    "zone.js": "^0.8.26",
-    "@nrwl/nx": "7.0.2",
     "@ngrx/effects": "6.1.0",
     "@ngrx/router-store": "6.1.0",
-    "@ngrx/store": "6.1.0"
+    "@ngrx/store": "6.1.0",
+    "@nrwl/nx": "7.0.2",
+    "core-js": "^2.5.4",
+    "hammerjs": "^2.0.8",
+    "rxjs": "~6.3.3",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular/cli": "7.0.1",
