--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,9 @@
       ],
       "@blog/shared/ui-material": [
         "libs/shared/ui-material/src/index.ts"
+      ],
+      "@blog/data-access-blog": [
+        "libs/data-access-blog/src/index.ts"
       ]
     }
   },
