--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.3.3",
-    "zone.js": "^0.8.26"
+    "zone.js": "^0.8.26",
+    "@ngrx/entity": "6.1.0"
   },
   "devDependencies": {
     "@angular/cli": "7.0.1",
